--- a/Switch_case/index.html
+++ b/Switch_case/index.html
@@ -45,7 +45,8 @@
   </head>
   <body>
     <div class="main">
-    <form class="mx-auto w-50 mt-5 alert alert-dark form">       
+    <form class="mx-auto w-50 mt-5 alert alert-dark form"> 
+      <h1 class="text-center mb-4">Calculator</h1>      
         <div class="mb-3">
             <label for="floatingInputGroup1" class="form-label">value1</label>
             <input id="value1" type="number" class="form-control" placeholder="value1">
