--- a/Switch_case/index.html
+++ b/Switch_case/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Form</title>
+    <title>Switch_case</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <style>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
+   <style>
     * {
         margin: 0;
         padding: 0;
@@ -27,7 +29,7 @@
       .form {
         background: radial-gradient( rgb(70, 67, 110) , rgb(44, 36, 138));
         margin-top: 10%;
-        color: black;
+        color: rgb(255, 255, 255);
         padding: 2%;
         width: 50%;
         border-radius: 15px;
@@ -39,6 +41,8 @@
       .btn{
          border-radius: 100%;
          background-color: rgb(100, 65, 132);
+         width:40px;
+         height: 40px;
       }
     
   </style>
@@ -49,12 +53,12 @@
       <h1 class="text-center mb-4">Calculator</h1>      
         <div class="mb-3">
             <label for="floatingInputGroup1" class="form-label">value1</label>
-            <input id="value1" type="number" class="form-control" placeholder="value1">
+            <input id="value1" type="number" class="form-control" placeholder="Enter value 1">
           </div>
-
+          
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">value2</label>
-          <input id="value2" type="number"  class="form-control" placeholder="value2"   aria-describedby="emailHelp"/>
+          <input id="value2" type="number"  class="form-control" placeholder="Enter value 2">
         </div>
   
 
