--- a/Dropdown/index.html
+++ b/Dropdown/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Form</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
+    <title>Dropdown</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
     <style>
@@ -18,19 +13,21 @@
         padding: 0;
         box-sizing: border-box;
       }
-      body {
-        background-image: url(./bg_1.jpeg);
-        background-repeat: no-repeat;
-        background-size: cover;
+
+      body{
+        background: radial-gradient( rgb(15, 9, 91) , rgb(44, 36, 138));
       }
+
       .main{
         width: 100%;
         display:flex;
         justify-content: center;
         align-items: center;
       }
+
       .form {
-        background-color: rgb(225, 225, 225);
+         background: radial-gradient( rgb(70, 67, 110) , rgb(44, 36, 138));
+         color: rgb(255, 255, 255);
         margin-top: 10%;
         padding: 2%;
         width: 50%;
@@ -51,15 +48,15 @@
         <h1 class="text-center mb-4">Calculator</h1>
         <div class="mb-3">
           <label for="floatingInputGroup1" class="form-label">Value 1</label>
-          <input id="value1" type="number" class="form-control " placeholder="value 1" />
+          <input id="value1" type="number" class="form-control " placeholder="Enter value 1" />
         </div>
 
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Value 2</label>
-          <input id="value2" type="number" class="form-control" placeholder="value 2"/>
+          <input id="value2" type="number" class="form-control" placeholder="Enter value 2"/>
         </div>
         <select onchange="calc()" id="selc" class="form-select">
-          <option value="" class="text-center text-tertiary-color">Enter operator</option>
+          <option selected disabled value="" class="text-center text-tertiary-color">Enter operator</option>
           <option  value="1">+</option>
           <option value="2">-</option>
           <option value="3">*</option>
