--- a/Radio_button/index.html
+++ b/Radio_button/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Form</title>
+    <title>Radio_button</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
     <style>
        * {
         margin: 0;
@@ -13,7 +14,7 @@
         box-sizing: border-box;
       }
       body{
-        background-color: rgb(71, 66, 66);
+        background: radial-gradient( rgb(15, 9, 91) , rgb(44, 36, 138));
       }
 
       .main{ 
@@ -25,7 +26,8 @@
       }
 
       .form {
-        background-color: rgb(148, 145, 145);
+        background: radial-gradient( rgb(70, 67, 110) , rgb(44, 36, 138));
+          color: rgb(255, 255, 255);
         margin-top: 10%;
         padding: 2%;
         width: 50%;
@@ -48,12 +50,12 @@
       <h1 class="text-center mb-4">Calculator</h1>
         <div class="mb-3">
             <label for="floatingInputGroup1">value1</label>
-            <input id="value1" type="number" class="form-control" placeholder="value1">
+            <input id="value1" type="number" class="form-control" placeholder="Enter value1">
           </div>
 
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">value2</label>
-          <input id="value2" type="number"  class="form-control" placeholder="value2"   aria-describedby="emailHelp"/>
+          <input id="value2" type="number"  class="form-control" placeholder="Enter valu2"bedby="emailHelp"/>
         </div>
   
         <div class="mt-3 text-center text-tertiary-color" id="calc">
